@@ -1,3 +1,8 @@
+2012-04-17  Alex Harsanyi  <AlexHarsanyi@gmail.com>
+
+	* vc-clearcase.el (clearcase-hijack-file-handler): check that the
+	FPROP is on an original buffer (as opposed to a derived buffer)
+
 2012-02-17  Alex Harsanyi  <AlexHarsanyi@gmail.com>
 
 	* vc-clearcase.el (clearcase-save-fprop-on-kill): ignore errors.
